More margin alignment fixes

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -448,10 +448,7 @@ li.govuk-tabs__list-item {
 
 .govuk-tabs__panel {
   .govuk-grid-row {
-    margin-left: 0;
-    margin-right: 0;
     .govuk-grid-column-two-thirds {
-      padding: 0;
       .govuk-accordion, .govuk-accordion__section-header {
         margin-left: 0;
         margin-right: 0;
